2008-2-2 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/dependencies.rb,
	  lib/rucola/tasks/dependencies.rake,
	  lib/rucola/tasks/main.rake,
	  test/test_dependencies.rb:

	- Added a "dependencies:copy" rake task, which copies he required files to 'vendor/third_party/'.
	  As with the "dependencies:list" task, the env var FILE_TYPES can be used to filter.
	- Some more refactoring.

2008-2-2 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  lib/rucola/dependencies.rb,
	  lib/rucola/tasks/dependencies.rake,
	  test/fixtures/dependencies/requires_fileutils.rb,
	  test/test_dependencies.rb:

	- Refactored a lot of dependencies code.
	- The 'dependencies:list' rake task now checks for file types with the env var FILE_TYPES.
	  If you only want to list for instance the gem and standard lib files that it requires,
	  you would use "rake dependencies:list FILE_TYPES='gem, standard'".
	  All types options are: gem, standard, other (outside of any of the other dirs.)

2008-1-30 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/dependencies.rb,
	  lib/rucola/initializer.rb,
	  lib/rucola/tasks/dependencies.rake:

	- Initializer will no longer break when config/dependencies.rb doesn't exist, but warn instead.
	- Added a rake task dependencies:list which lists the dependencies and their required files.

2008-1-26 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/dependencies.rb,
	  lib/rucola/initializer.rb,
	  test/test_initializer.rb:

	Initializer will now look for config/dependencies.rb in RUBYCOCOA_ROOT.
	(It will break if the file doesn't exist, not sure yet if we should warn.)

2008-1-26 Eloy Duran <e.duran@superalloy.nl>

	* Rakefile,
	  lib/rucola/dependencies.rb,
	  test/fixtures/dependencies,
	  test/fixtures/dependencies/foo,
	  test/fixtures/dependencies/foo.rb,
	  test/fixtures/dependencies/foo/bar.rb,
	  test/fixtures/dependencies/foo/baz.rb,
	  test/test_dependencies.rb,
	  test/test_fsevents.rb,